--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
     /*just bg and body style*/
     body {
       margin: 40px;
-      background-color: #808080;
-      background-image: linear-gradient(315deg, #de5499 19%, #a0c5ba 85%);
+      background-color: #bdfdc8;
+      background-image: linear-gradient(315deg, #eb63a7 19%, #a1f5dc 85%);
     }
 
     .container {
